--- a/frontend/rsc/css/styles.css
+++ b/frontend/rsc/css/styles.css
@@ -691,8 +691,12 @@ input:checked + .toggle-slider:before {
 
 /* Responsive adjustments */
 @media (max-width: 768px) {
+  .intro {
+    max-width: 95%;
+  }
+
   .intro-screenshot {
-    max-width: 90%; /* Makes the image adjust well on smaller screens */
+    max-width: 100%; /* Makes the image adjust well on smaller screens */
   }
 
   .intro-title {
